--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -15,7 +15,7 @@
     <!--Effect: Bottom to Top -->
     <div align="center" style="color: white"> <h1>Welcome to MyMusic</h1> </div>
     <div class="pic" align="center">
-        <img src="../client/views/assets/paper_img/ssss.gif" class="pic-image" alt="Pic"/>
+        <img src="../client/views/assets/paper_img/ssss.gif" alt="Pic"/>
 
     </div>
     <div class="row">
@@ -24,21 +24,22 @@
             <h1 class="page-header">Hot Picks</h1>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+        <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <a class="thumbnail" href="#">
                 <img class="img-responsive" src="../client/views/assets/paper_img/h5.png" alt="">
             </a>
         </div>
-        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+        <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <a class="thumbnail" href="#">
                 <img class="img-responsive" src="../client/views/assets/paper_img/h6.png" alt="">
             </a>
         </div>
-        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+        <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <a class="thumbnail" href="#">
                 <img class="img-responsive" src="../client/views/assets/paper_img/h4.png" alt="">
             </a>
         </div>
+
 
 
 
