--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -61,7 +61,7 @@
 
 <div class="row">
             <div class="search-result">
-                <h2 class="page-header"> Favorites </h2>
+                <h2 class="page-header"> Favourites </h2>
                 <h6 ng-hide="model.songs">no favourites</h6>
                 <table class="table table-bordered table-responsive rounded-table" ng-show="model.songs">
                     <thead>
