--- a/public/project/client/views/documentation/documentation.view.html
+++ b/public/project/client/views/documentation/documentation.view.html
@@ -2,8 +2,11 @@
 <div class="wrapper">
 
     <div class="main">
-        <div class="section section-dark  landing-section" style="padding-top: 50px">
+        <div  style="padding-top: 30px">
             <div class="container">
+                <div class="pull-right">
+                <a href="https://drive.google.com/file/d/0B5Px7SrDiPnGN2N6MGdqUVRMb2M/view">project proposal</a>
+                </div>
                 <h2>Functionality</h2>
                 <div class="container">
 
