--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -25,17 +25,17 @@
         </div>
 
         <div class="col-lg-4 col-md-4 col-xs-4 thumb">
-            <a class="thumbnail" href="#">
+            <a class="thumbnail" href="#/search">
                 <img class="img-responsive" src="../client/views/assets/paper_img/h5.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-4 thumb">
-            <a class="thumbnail" href="#">
+            <a class="thumbnail" href="#/search">
                 <img class="img-responsive" src="../client/views/assets/paper_img/h6.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-4 thumb">
-            <a class="thumbnail" href="#">
+            <a class="thumbnail" href="#/search">
                 <img class="img-responsive" src="../client/views/assets/paper_img/h4.png" alt="">
             </a>
         </div>
