--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -13,7 +13,7 @@
     </div>-->
 
     <!--Effect: Bottom to Top -->
-    <div align="center" style="color: white"> <h1>Welcome to Harmony</h1> </div>
+    <div align="center" style="color: white"> <h1>Welcome to MTunes</h1> </div>
     <div class="pic" align="center">
         <img class="img-responsive" src="../client/views/assets/paper_img/coll.png" alt="Pic"/>
 
