--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -68,16 +68,17 @@
     <textarea id="userComment"class="form-control" value="" rows="2" ng-model="model.userComment">
     </textarea><br>
     <button ng-show="model.isNewComment" class="btn btn-success" ng-click="model.updateComment()">Save</button>
-    <button ng-show="!model.isNewComment" class="btn btn-primary" ng-click="model.updateComment()">Update</button>
+    <button ng-show="!model.isNewComment" class="btn btn-success" ng-click="model.updateComment()">Update</button>
     <button class="btn btn-danger" ng-click="model.commentFlag = !model.commentFlag">Cancel</button>
 </div>
 
     <h2>Comments </h2>
 
     <table class="table table-responsive">
+
         <tr ng-repeat="comment in model.comments">
-        <td><a href="#/profile/{{comment.userID}}">User: {{comment.username}}</a></td>
-        <td>Comment: {{comment.comment}}</td>
+        <td><a style="color: orange" href="#/profile/{{comment.userID}}"> {{comment.username}}</a></td>
+        <td>{{comment.username}}'s Comment: {{comment.comment}}</td>
             <td></td>
         </tr>
 
