--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -30,7 +30,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="password">Password</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" ng-class="{'disabled': model.readonly}" placeholder="Password" id="password" ng-model="model.password">
+                    <input type="password" class="form-control" ng-class="{'disabled': model.readonly}" placeholder="Password" id="password" ng-model="model.password">
                 </div>
             </div>
 
