--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -3,7 +3,7 @@
 
 <body ng-controller="ProfileController">
 
-<div class="container-fluid">
+<div class="container-fluid cust-margin">
     <div class="row">
         <h1 class="page-header">Profile</h1>
         <div ng-show="model.message" class="alert alert-success" role="alert">
@@ -19,7 +19,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="password">Password</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" placeholder="Password" id="password" ng-model="model.password">
+                    <input type="password" class="form-control" placeholder="Password" id="password" ng-model="model.password">
                 </div>
             </div>
 
