--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -21,7 +21,8 @@
     <div class="row">
 
         <div class="col-lg-12">
-            <h1 class="page-header">Hot Picks</h1>
+            <h1 class="page-header">Click to check out our Featured Playlist</h1>
+
         </div>
 
         <div class="col-lg-4 col-md-4 col-xs-4 thumb">
