--- a/public/project/client/views/documentation/documentation.view.html
+++ b/public/project/client/views/documentation/documentation.view.html
@@ -36,6 +36,7 @@
                         <li> Only the logged in user can like or unlike </li>
                         <li> Only logged in user can create a new comment or delete his comment </li>
                         <li> Only logged in user can view all his likes in his profile page</li>
+                        <li> Any User can listen to the featured playlists from the home page</li>
                     </ol>
                 </div>
             </div>
