--- a/public/project/client/views/header/header.view.html
+++ b/public/project/client/views/header/header.view.html
@@ -16,6 +16,8 @@
                 <li ng-hide="currentUser" ng-class="{'active' : $location.url() == '/documentation'}">
                     <a href="#/documentation" class="add-under-line"> Documentation</a></li>
 
+                <li ng-hide="currentUser">
+                    <a href="http://youtu.be/NrBQDMa5TdI" class="add-under-line"> Video</a></li>
                 <li ng-hide="currentUser" ng-class="{'active' : $location.url() == '/register'}">
                     <a href="#/register" class="add-under-line"> Register</a></li>
                 <li ng-hide="currentUser" ng-class="{'active' : $location.url() == '/login'}">
